Refactor policy configuration (#4026)
